update compression rate

--- a/explain.ipynb
+++ b/explain.ipynb
@@ -15,15 +15,6 @@
   },
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "PeIoNgDlpkxF"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "# 工具說明"
@@ -44,15 +35,6 @@
       "metadata": {
         "id": "24nBR1eyXQB1"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "YJgp1bbrftAo"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -97,19 +79,10 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "KmD0GRpMXJq8"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "# 登入\n",
-        "請填入帳號密碼，然後選擇使用者，Project 可以修改為這一次的項目名稱。\n",
+        "請填入帳號密碼，然後選擇使用者，Project 可以修改為這一次的項目名稱，你也可以使用 'data.login' import 檔案登入。\n",
         "\n",
         "![003](https://raw.githubusercontent.com/tobytoy/Colab-Manager/main/pictures/explain_003.png)\n"
       ],
@@ -129,7 +102,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "你可以利用關注項目工具修改，影片與檔案的關注位置。\n",
+        "你可以利用關注項目工具修改，影片與檔案的關注位置，如果有位置沒刷新到可以點 Refresh 按鈕刷新檔案列表。\n",
         "\n",
         "![004](https://raw.githubusercontent.com/tobytoy/Colab-Manager/main/pictures/explain_004.png)\n"
       ],
@@ -138,18 +111,17 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "SWbLwYfVpw5r"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "* 你可以用下載工具整包下載檔案，如果你要下載的只有一個檔案可以到檔案目錄下面去下載單個檔案。\n",
+        "\n",
+        "目前提供的打包下載支援\n",
+        "\n",
+        "1. 'All' : 會把 videos, output videos, datas, output datas 裡面的檔案都打包下載。\n",
+        "2. 'videos' : 會把 videos 裡面的檔案都打包下載。\n",
+        "3. 'output datas' : 會把 output datas 裡面的檔案都打包下載。\n",
+        "4. 'output videos' : 會把 output videos 裡面的檔案都打包下載。\n",
+        "5. 'output datas and videos' : 會把 output videos, output datas 裡面的檔案都打包下載。\n",
         "\n",
         "![005](https://raw.githubusercontent.com/tobytoy/Colab-Manager/main/pictures/explain_005.png)\n"
       ],
@@ -160,7 +132,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "* 你可以用影片顯示工具觀看，目前選擇的影片\n",
+        "* 你可以用影片顯示工具觀看，目前選擇的影片，但是要注意如果影片超過４５秒，只會播放前４５秒的影片。\n",
         "\n",
         "![006](https://raw.githubusercontent.com/tobytoy/Colab-Manager/main/pictures/explain_006.png)\n",
         "\n",
@@ -171,15 +143,6 @@
       "metadata": {
         "id": "m3yYO0ZFbfCY"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ub79jczXa3Lc"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -198,15 +161,6 @@
       "metadata": {
         "id": "lmRzNkNub3VW"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "esU7ZdezcASq"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -231,15 +185,6 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "KF7tCDytcAXy"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "* 我們要選出很貼合要比對動作的片段，這次 Demo 我們就直接選開始時間３秒結束時間７秒就好，真實標註要看過影片再選會比較好。\n",
@@ -249,15 +194,6 @@
       "metadata": {
         "id": "uVhN7FDQdvqU"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "KDllIGs4cAac"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -271,15 +207,6 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "4JlJ2TULdzFT"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "* 這版標註工具也支持舊版\n",
@@ -289,15 +216,6 @@
       "metadata": {
         "id": "1CuWhtyqd3fg"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "bhjvcXCAd23q"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -311,15 +229,6 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "szVxHHjBd26P"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "* 下面開始跑人體點位模型\n",
@@ -331,15 +240,6 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "x5bycFEjd28S"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "* 下面要開始製作動作判定標記 Json 檔\n",
@@ -349,24 +249,6 @@
       "metadata": {
         "id": "95B10VCGeAzs"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "QsA7B99Xd2-e"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "yeJRrx0cdzHx"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -414,15 +296,6 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "dM5HumikFCRA"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "* 工具支持 Json Schema 檢查，如果有格式錯誤可以方便修改\n",
@@ -432,15 +305,6 @@
       "metadata": {
         "id": "wh3sVgaee1IT"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "xTpw_UMyeOG_"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -454,15 +318,6 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "tdLQAqoveOKD"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "* 工具提供檔案壓縮\n",
@@ -472,15 +327,6 @@
       "metadata": {
         "id": "8Tv0htrNe6fu"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "wjh3ifAueOMo"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -494,15 +340,6 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "bdyGjaG3eOSX"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "* 最後提供暫時性 api server\n",
@@ -512,15 +349,6 @@
       "metadata": {
         "id": "caGhr5gre_iz"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "V8gOTsYseOUN"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -540,71 +368,6 @@
       "source": [],
       "metadata": {
         "id": "It4vc1EnFCbc"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# 如果需要一個測試的暫時性 api server 做測試，可以繼續跑\n",
-        "\n",
-        "你需要 [Ngrok](https://ngrok.com/) 做反向代理，所以要在下面填入你的 authtoken key ，你可以免費申請到帳號，根據下圖你可以得到你的 authtoken key\n"
-      ],
-      "metadata": {
-        "id": "nKCaVOTYICr3"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "![Ngrok](https://raw.githubusercontent.com/tobytoy/Colab-Manager/main/pictures/Ngrok.png)\n"
-      ],
-      "metadata": {
-        "id": "F_Xn9OHPID2o"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "6yygqr5xFCku"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "pVSOFXN-IIW_"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "A-vG21mCIIZw"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "slFST4O5IIbx"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "XdlrBQYEIIeZ"
       },
       "execution_count": null,
       "outputs": []
